<resources>
    <string name="app_name">KotlinX</string>
    <string name="hello_world">Hello, world</string>

    <!--    bottom navigation-->
    <string name="home">Home</string>
    <string name="flow">Flow</string>
    <string name="web_view">WebView</string>

    <!--    email  -->
    <string name="support_email">mailto:support@egnom.com</string>
    <string name="email_subject">Egnom individual subscription</string>
    <string name="email_body">I want to get an individual subscription in Egnom app. Contact me please.\n\n\nSend from my Phone </string>
    <string name="send_email">Send email..</string>
    <string name="work_manager">Work Manager</string>
    <string name="coroutines">Coroutines</string>
    <string name="start_non_coroutine_work">Start non-coroutine work</string>
    <string name="start_simple_work">Start simple work</string>
    <string name="stop_simple_work">Stop simple work</string>
    <string name="start_periodic_work">Start periodic work</string>
    <string name="stop_periodic_work">Stop periodic work</string>

    <!--    cl finals-->
    <string name="search">Search</string>
    <string name="ar">AR</string>
    <string name="timer">Timer</string>
    <string name="show_cl_finals_list">Show CL finals list</string>
    <string name="to_be_continued">To be continued…</string>
    <string name="thats_all_folks">That\'s all folks!</string>

    <!--    cl countdown-->
    <string name="show_cl_countdown">Show CL countdown</string>
    <string name="label_text">Champions League will resume \n on Friday 7 August at 22:00</string>
    <string name="cl_started">YOU ARE FREE!!!</string>

    <!--    home-->
    <string name="change_status_bar_color">Change status bar color</string>
    <string name="test">Test</string>
    <string name="get_display_sizes">Get display sizes</string>
    <string name="check_memory">Check memory</string>
    <string name="change_nav_bar_color">Change nav bar color</string>
    <string name="show_flash_animation">Show flash animation</string>
    <string name="show_shake_animation">Show shake animation</string>
    <string name="fragment_transition_animation">Fragment transitions animations</string>
    <string name="fragment_ripple_animation">Fragment ripple animations</string>
    <string name="fullscreen_dialog">Fullscreen dialog</string>
    <string name="alert_dialog">Material alert dialog</string>
    <string name="second_activity">Second activity</string>
    <string name="third_activity">Third Activity</string>
    <string name="service_activity">Service Activity</string>
    <string name="bind_service_activity">Bind Service Activity</string>
    <string name="view_pager">View Pager 2</string>
    <string name="third_activity_send_data">Third Activity.\nPress to send data</string>
    <string name="hide_system_ui">Hide system UI</string>
    <string name="name">Name</string>
    <string name="bad_user_name">Should contain 3&#8211;32 characters. Letters and \' - allowed</string>
    <string name="bad_phone">Bad phone</string>
    <string name="bad_email">Bad email</string>
    <string name="required">Required</string>
    <string name="phone_number">Phone Number</string>
    <string name="ui_changes">UI changes</string>
    <string name="log_info">Log info</string>
    <string name="inputs">Inputs</string>
    <string name="handler">Handler</string>
    <string name="measure_time">Measure time</string>
    <string name="password">Password</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>


    <!--    fragment transitions animations-->
    <string name="slide_up_down">Slide up/down</string>
    <string name="slide_up_down_offset">Slide up/down with delay before anim</string>
    <string name="ios_like">iOS-like (Donut)</string>
    <string name="fades">Fade in/out</string>
    <string name="cards">Cards</string>
    <string name="slides">Slides</string>
    <string name="diagonal">Diagonal</string>
    <string name="rotate">Rotate</string>
    <string name="pulse">Pulse</string>
    <string name="change_text">Change text</string>
    <string name="start_the_coroutine">Start the coroutine</string>
    <string name="network_request">Network request</string>
    <string name="do_request_simple">Do request simple way</string>
    <string name="do_request_ext">Do request extension</string>
    <string name="do_request_executor">Do request executor</string>
    <string name="do_request_adapter">Do request call adapter</string>
    <string name="do_request_rx">Do request rx</string>
    <string name="do_request_call">Do request call</string>
    <string name="second_fragment">Second fragment</string>


    <string name="content_text_one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a quam tincidunt urna feugiat vestibulum quis non dolor. Phasellus porttitor sem arcu, quis ultrices mauris rutrum commodo. Quisque at lobortis libero. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus consectetur nisi eget leo imperdiet congue hendrerit et eros. Curabitur sed odio euismod, mattis enim feugiat, faucibus ante. Maecenas iaculis, elit ac bibendum lacinia, dolor libero auctor justo, finibus malesuada ex metus eget elit. Vestibulum sit amet finibus massa. Nulla id eros lectus. Donec vestibulum feugiat euismod. Proin tincidunt nulla in velit dapibus fermentum. Phasellus egestas sed ipsum id malesuada. Nullam at dignissim nunc. Vivamus mollis lobortis tristique.

Ut justo velit, consectetur sit amet porttitor et, scelerisque et odio. Suspendisse viverra in risus sit amet pharetra. Suspendisse sit amet ipsum est. Duis porta lacus ultrices, posuere sapien sollicitudin, vestibulum nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In fringilla tincidunt tincidunt. Vivamus mollis lorem et mattis tempor. Morbi volutpat arcu lorem, a lobortis turpis blandit ac. Curabitur dolor erat, auctor tristique porttitor id, venenatis at nunc. Suspendisse efficitur elit sem, sed interdum ligula commodo nec. Cras semper justo vel auctor hendrerit. Nam dui diam, pretium ac tristique eu, porttitor a urna. Cras ac sagittis mi, eu bibendum lacus.

Aenean in arcu laoreet, gravida orci et, faucibus velit. Etiam finibus viverra tortor vel pretium. Curabitur vitae ex sed ex convallis suscipit. Pellentesque malesuada hendrerit neque, et vestibulum ligula mollis at. Mauris vehicula nisl quam, et eleifend orci varius eget. Quisque ut urna eu ipsum commodo feugiat. Suspendisse ac sem nec enim laoreet dictum venenatis eget neque. Donec egestas suscipit leo, sodales posuere nibh accumsan nec. Sed nec erat aliquam, hendrerit sapien non, fermentum diam. Aliquam erat volutpat. Aliquam varius semper purus, ac accumsan arcu finibus non.
    </string>
    <string name="content_text_two">Nam ultrices, nunc sit amet vulputate vehicula, eros sem malesuada augue, quis cursus sem orci id magna. Vestibulum neque nibh, scelerisque eget urna nec, malesuada aliquam magna. Aenean varius justo tellus. Donec non leo ut turpis condimentum pharetra. Vestibulum lacinia lobortis volutpat. Suspendisse viverra augue a quam pellentesque fringilla. Fusce at purus nisl. Maecenas at justo nec sem efficitur finibus. Etiam sodales sit amet nulla non dapibus. Donec eget ante quam.</string>
    <string name="some_button">some button</string>

    <string name="start">Start service</string>
    <string name="stop">Stop service</string>
    <string name="bind">Bind</string>
    <string name="unbind">Unbind</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
</resources>