<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    tools:context=".practice.view.network_request.NetworkRequestFragment">

    <Button
        android:id="@+id/btn_do_request_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_request_simple"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btn_do_request_ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_request_ext"
        android:layout_below="@+id/btn_do_request_simple"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btn_do_request_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_request_adapter"
        android:layout_below="@+id/btn_do_request_ext"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btn_do_request_rx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_request_rx"
        android:layout_below="@+id/btn_do_request_adapter"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btn_do_request_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_request_call"
        android:layout_below="@+id/btn_do_request_rx"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/btn_do_request_call"
        android:layout_centerHorizontal="true"
        tools:text="Info from request"/>

</RelativeLayout>