<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".practice.view.workmanager.WorkManagerFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_simple_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_simple_work"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_stop_simple_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_simple_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_simple_work"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_periodic_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_periodic_work"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_stop_periodic_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_periodic_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_periodic_work"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>



</androidx.constraintlayout.widget.ConstraintLayout>